--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,13 @@
 :root {
+  /* color */
   --color-background: rgb(75, 80, 100);
   --color-blue: rgb(90, 155, 210);
   --color-yellow: rgb(255, 215, 0);
   --color-pink: rgb(250, 50, 70);
   --color-white: rgb(255, 255, 255);
+
+  /* annimation */
+  --animation-duration: 300ms;
 }
 
 body {
@@ -18,6 +22,11 @@ body {
   min-width: 300px;
 }
 
+.logo img {
+  cursor: pointer;
+  transition: transform var(--animation-duration) ease;
+}
+
 .buttons {
   display: flex;
   align-items: center;
@@ -28,6 +37,13 @@ body {
 .buttons button {
   flex-basis: 100%;
   margin-right: 0.5em;
+  cursor: pointer;
+  transition: transform var(--animation-duration) ease;
+}
+
+.logo img:hover,
+.buttons button:hover {
+  transform: scale(1.1);
 }
 
 .imgBtn {
@@ -73,6 +89,17 @@ body {
   overflow-y: scroll;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.items::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.items {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .items .item {
   display: flex;
   align-items: center;
@@ -90,6 +117,6 @@ body {
 }
 .item .description {
   display: inline-block;
-  font-size: 0.5em;
+  font-size: 1.5em;
   margin-left: 0.5em;
 }
